# georeview-studio

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  api_contract_summary.json  project_manifest.json  pyproject.toml  validation_summary.json  Контекст.md
.codex/: project-profile.md
backend/: __init__.py  analysis_profiles.py  analysis_runs.py  analysis_workflow.py  app.py  authored_profile_runner.py  bundle_review_checklist.py  comparison_map_exports.py  contract_execution.py  dataset_package.py  demo_artifact_completeness.py  demo_review_playbook.py  demo_script_pack.py  execution_diff_detail.py  execution_diff_gallery.py  execution_evidence_package.py  execution_queue.py  execution_result_diff.py  final_reviewer_launch_checklist.py  generic_safe_access_mapper.py  github_publication_bundle.py  local_intake.py  multi_pilot_comparison.py  osm_tag_quality.py  park_playground_access_analyzer.py  pilot_area_catalog.py  portable_release_package.py  portfolio_demo.py  portfolio_evidence_bundle.py  portfolio_evidence_gallery.py  portfolio_export_launcher.py  portfolio_handoff_page.py  portfolio_narrative_export.py  portfolio_report_builder.py  postgis_backend.py  preflight.py  product_architecture.py  profile_dashboard.py  profile_export_bundle.py  profile_mapper.py  (+30 more)
config/: postgis_schema_v001.sql  profile_mapper_contracts_v001.json  scoring_rules_v001.json
docs/: README.md  accepted_contract_application_plan.md  api.md  architecture.md  authored_dashboard_contract.md  authored_profile_runner.md  bundle_review_checklist.md  comparison_map_exports.md  contract_execution.md  data_model.md  dataset_package.md  demo_artifact_completeness.md  demo_review_playbook.md  demo_script_pack.md  execution_diff_detail.md  execution_diff_gallery.md  execution_evidence_package.md  (+56 more)
(+51 files in other folders)
